interface/ogre_interface.h



typedef struct
{
    float x;
    float y;
    float z;
} coiVector3;


DLL RenderWindowHandle create_render_window(const char* name, const int width, const int height, const int full_screen);


DLL RenderWindowHandle create_render_window_gl_context(const char* name, const int width, const int height, const int full_screen);


DLL void add_render_system(RenderSystemHandle render_system);


DLL void set_render_system(RenderSystemHandle render_system);


DLL RenderSystemHandle get_render_system();


DLL RenderSystemHandle get_render_system_by_name(const char* render_system_name);


DLL void render_system_set_config_option(RenderSystemHandle render_system_handle, const char* option, const char* value);


// Light
DLL LightHandle create_light(const char* light_name);


DLL void light_set_position(LightHandle handle, const float x, const float y, const float z);


DLL void light_set_diffuse_colour(LightHandle handle, const float r, const float g, const float b);


DLL void light_set_specular_colour(LightHandle handle, const float r, const float g, const float b);


DLL void light_set_direction(LightHandle handle, const float x, const float y, const float z);


DLL void light_set_spotlight_range(LightHandle handle, const float inner_angle, const float outer_angle, const float falloff);


DLL void light_set_power_scale(LightHandle handle, const float power);


DLL const float light_get_power_scale(LightHandle handle);


DLL void light_set_attenuation(LightHandle handle, const float range, const float constant, const float linear, const float quadratic);



// Plane
DLL PlaneHandle create_plane(coiReal a, coiReal b, coiReal c, coiReal d);

DLL PlaneHandle create_plane_from_normal(coiReal normal_x, coiReal normal_y, coiReal normal_z, coiReal offset);

DLL void  mesh_manager_create_plane(const char* name, const char* group_name, PlaneHandle plane, coiReal width, coiReal height, int xsegments, int ysegments, int normals, unsigned short num_tex_coord_sets, coiReal u_tile, coiReal v_tile, coiReal upvector_x, coiReal upvector_y, coiReal upvector_z);



// MovableObject
DLL void movable_object_set_cast_shadows(MovableObjectHandle handle, int cast_shadows);