interface/h/ogre_light.h

DLL coiColourValue light_get_diffuse_colour(CoiHandle light_handle);
DLL coiVector3 light_get_derived_direction(CoiHandle light_handle);