interface/swig/ogre.lisp


(cffi:defcfun ("image_delete" #.(swig-lispify "image_delete" 'function)) :void
  (image_handle :pointer))

(cl:export '#.(swig-lispify "image_delete" 'function))

(cffi:defcfun ("create_light" #.(swig-lispify "create_light" 'function)) :pointer
  (scene_manager_handle :pointer)
  (light_name :string))

(cl:export '#.(swig-lispify "create_light" 'function))

(cffi:defcfun ("light_set_position" #.(swig-lispify "light_set_position" 'function)) :void
  (light_handle :pointer)
  (x :float)
  (y :float)
  (z :float))

(cl:export '#.(swig-lispify "light_set_position" 'function))

(cffi:defcfun ("light_set_diffuse_colour" #.(swig-lispify "light_set_diffuse_colour" 'function)) :void
  (light_handle :pointer)
  (r :float)
  (g :float)
  (b :float))

(cl:export '#.(swig-lispify "light_set_diffuse_colour" 'function))

(cffi:defcfun ("light_get_diffuse_colour" #.(swig-lispify "light_get_diffuse_colour" 'function)) #.(swig-lispify "coiColourValue" 'classname)
  (light_handle :pointer))

(cl:export '#.(swig-lispify "light_get_diffuse_colour" 'function))

(cffi:defcfun ("light_set_specular_colour" #.(swig-lispify "light_set_specular_colour" 'function)) :void
  (light_handle :pointer)
  (r :float)
  (g :float)
  (b :float))

(cl:export '#.(swig-lispify "light_set_specular_colour" 'function))

(cffi:defcfun ("light_set_direction" #.(swig-lispify "light_set_direction" 'function)) :void
  (light_handle :pointer)
  (x :float)
  (y :float)
  (z :float))

(cl:export '#.(swig-lispify "light_set_direction" 'function))

(cffi:defcfun ("light_set_spotlight_range" #.(swig-lispify "light_set_spotlight_range" 'function)) :void
  (light_handle :pointer)
  (inner_angle :float)
  (outer_angle :float)
  (falloff :float))

(cl:export '#.(swig-lispify "light_set_spotlight_range" 'function))

(cffi:defcfun ("light_set_power_scale" #.(swig-lispify "light_set_power_scale" 'function)) :void
  (light_handle :pointer)
  (power :float))

(cl:export '#.(swig-lispify "light_set_power_scale" 'function))

(cffi:defcfun ("light_get_power_scale" #.(swig-lispify "light_get_power_scale" 'function)) :float
  (light_handle :pointer))

(cl:export '#.(swig-lispify "light_get_power_scale" 'function))

(cffi:defcfun ("light_set_attenuation" #.(swig-lispify "light_set_attenuation" 'function)) :void
  (light_handle :pointer)
  (range :float)
  (constant :float)
  (linear :float)
  (quadratic :float))

(cl:export '#.(swig-lispify "light_set_attenuation" 'function))

(cffi:defcfun ("light_get_derived_direction" #.(swig-lispify "light_get_derived_direction" 'function)) #.(swig-lispify "coiVector3" 'classname)
  (light_handle :pointer))

(cl:export '#.(swig-lispify "light_get_derived_direction" 'function))

(cffi:defcfun ("create_manual_object" #.(swig-lispify "create_manual_object" 'function)) :pointer
  (scene_manager_handle :pointer)
  (name :string))

(cl:export '#.(swig-lispify "create_manual_object" 'function))

(cffi:defcfun ("manual_object_delete" #.(swig-lispify "manual_object_delete" 'function)) :void
  (manual_object_handle :pointer))

(cl:export '#.(swig-lispify "manual_object_delete" 'function))

(cffi:defcfun ("manual_object_clear" #.(swig-lispify "manual_object_clear" 'function)) :void
  (manual_object_handle :pointer))

(cl:export '#.(swig-lispify "manual_object_clear" 'function))

(cffi:defcfun ("manual_object_estimate_vertex_count" #.(swig-lispify "manual_object_estimate_vertex_count" 'function)) :void
  (manual_object_handle :pointer)
  (vcount :int))

(cl:export '#.(swig-lispify "manual_object_estimate_vertex_count" 'function))

(cffi:defcfun ("manual_object_estimate_index_count" #.(swig-lispify "manual_object_estimate_index_count" 'function)) :void
  (manual_object_handle :pointer)
  (icount :int))

(cl:export '#.(swig-lispify "manual_object_estimate_index_count" 'function))

(cffi:defcfun ("manual_object_begin" #.(swig-lispify "manual_object_begin" 'function)) :void
  (manual_object_handle :pointer)
  (material_name :string)
  (render_operation :int)
  (resource_group_name :string))

(cl:export '#.(swig-lispify "manual_object_begin" 'function))

(cffi:defcfun ("manual_object_set_dynamic" #.(swig-lispify "manual_object_set_dynamic" 'function)) :void
  (manual_object_handle :pointer)
  (dyn :int))

(cl:export '#.(swig-lispify "manual_object_set_dynamic" 'function))

(cffi:defcfun ("manual_object_get_dynamic" #.(swig-lispify "manual_object_get_dynamic" 'function)) :int
  (manual_object_handle :pointer))

(cl:export '#.(swig-lispify "manual_object_get_dynamic" 'function))

(cffi:defcfun ("manual_object_begin_update" #.(swig-lispify "manual_object_begin_update" 'function)) :void
  (manual_object_handle :pointer)
  (section_index :int))

(cl:export '#.(swig-lispify "manual_object_begin_update" 'function))

(cffi:defcfun ("manual_object_position" #.(swig-lispify "manual_object_position" 'function)) :void
  (manual_object_handle :pointer)
  (x :float)
  (y :float)
  (z :float))

(cl:export '#.(swig-lispify "manual_object_position" 'function))

(cffi:defcfun ("manual_object_normal" #.(swig-lispify "manual_object_normal" 'function)) :void
  (manual_object_handle :pointer)
  (x :float)
  (y :float)
  (z :float))

(cl:export '#.(swig-lispify "manual_object_normal" 'function))

(cffi:defcfun ("manual_object_tangent" #.(swig-lispify "manual_object_tangent" 'function)) :void
  (manual_object_handle :pointer)
  (x :float)
  (y :float)
  (z :float))

(cl:export '#.(swig-lispify "manual_object_tangent" 'function))

(cffi:defcfun ("manual_object_texture_coord_u" #.(swig-lispify "manual_object_texture_coord_u" 'function)) :void
  (manual_object_handle :pointer)
  (u :float))

(cl:export '#.(swig-lispify "manual_object_texture_coord_u" 'function))

(cffi:defcfun ("manual_object_texture_coord_uv" #.(swig-lispify "manual_object_texture_coord_uv" 'function)) :void
  (manual_object_handle :pointer)
  (u :float)
  (v :float))

(cl:export '#.(swig-lispify "manual_object_texture_coord_uv" 'function))

(cffi:defcfun ("manual_object_texture_coord_uvw" #.(swig-lispify "manual_object_texture_coord_uvw" 'function)) :void
  (manual_object_handle :pointer)
  (u :float)
  (v :float)
  (w :float))

(cl:export '#.(swig-lispify "manual_object_texture_coord_uvw" 'function))

(cffi:defcfun ("manual_object_texture_coord_xyzw" #.(swig-lispify "manual_object_texture_coord_xyzw" 'function)) :void
  (manual_object_handle :pointer)
  (x :float)
  (y :float)
  (z :float)
  (w :float))

(cl:export '#.(swig-lispify "manual_object_texture_coord_xyzw" 'function))

(cffi:defcfun ("manual_object_colour" #.(swig-lispify "manual_object_colour" 'function)) :void
  (manual_object_handle :pointer)
  (r :float)
  (g :float)
  (b :float)
  (a :float))

(cl:export '#.(swig-lispify "manual_object_colour" 'function))

(cffi:defcfun ("manual_object_index" #.(swig-lispify "manual_object_index" 'function)) :void
  (manual_object_handle :pointer)
  (idx :unsigned-int))

(cl:export '#.(swig-lispify "manual_object_index" 'function))

(cffi:defcfun ("manual_object_triangle" #.(swig-lispify "manual_object_triangle" 'function)) :void
  (manual_object_handle :pointer)
  (i1 :unsigned-int)
  (i2 :unsigned-int)
  (i3 :unsigned-int))

(cl:export '#.(swig-lispify "manual_object_triangle" 'function))

(cffi:defcfun ("manual_object_quad" #.(swig-lispify "manual_object_quad" 'function)) :void
  (manual_object_handle :pointer)
  (i1 :unsigned-int)
  (i2 :unsigned-int)
  (i3 :unsigned-int)
  (i4 :unsigned-int))

(cl:export '#.(swig-lispify "manual_object_quad" 'function))

(cffi:defcfun ("manual_object_end" #.(swig-lispify "manual_object_end" 'function)) :pointer
  (manual_object_handle :pointer))

(cl:export '#.(swig-lispify "manual_object_end" 'function))

(cffi:defcfun ("manual_object_set_material_name" #.(swig-lispify "manual_object_set_material_name" 'function)) :void
  (manual_object_handle :pointer)
  (sub_index :int)
  (name :string)
  (resource_group_name :string))

(cl:export '#.(swig-lispify "manual_object_set_material_name" 'function))

(cffi:defcfun ("math_clamp_f" #.(swig-lispify "math_clamp_f" 'function)) :float
  (value :float)
  (min :float)
  (max :float))

(cl:export '#.(swig-lispify "math_clamp_f" 'function))

(cffi:defcfun ("multiply_quaternion_with_quaternion" #.(swig-lispify "multiply_quaternion_with_quaternion" 'function)) :void
  (quat1_handle :pointer)
  (quat2_handle :pointer)
  (quaternion_output_handle :pointer))

(cl:export '#.(swig-lispify "multiply_quaternion_with_quaternion" 'function))

(cffi:defcfun ("multiply_quaternion_with_vector3" #.(swig-lispify "multiply_quaternion_with_vector3" 'function)) :void
  (quat_handle :pointer)
  (vector_handle :pointer)
  (vector_output_handle :pointer))

(cl:export '#.(swig-lispify "multiply_quaternion_with_vector3" 'function))

(cffi:defcfun ("multiply_vector3_with_vector3" #.(swig-lispify "multiply_vector3_with_vector3" 'function)) :void
  (vector1_handle :pointer)
  (vector2_handle :pointer)
  (vector_output_handle :pointer))

(cl:export '#.(swig-lispify "multiply_vector3_with_vector3" 'function))

(cffi:defcfun ("get_mesh_manager" #.(swig-lispify "get_mesh_manager" 'function)) :pointer)

(cl:export '#.(swig-lispify "get_mesh_manager" 'function))

(cffi:defcfun ("mesh_manager_create_plane" #.(swig-lispify "mesh_manager_create_plane" 'function)) :void
  (name :string)
  (group_name :string)
  (plane_handle :pointer)
  (width :float)
  (height :float)
  (xsegments :int)
  (ysegments :int)
  (normals :int)
  (num_tex_coord_sets :unsigned-short)
  (u_tile :float)
  (v_tile :float)
  (upvector_x :float)
  (upvector_y :float)
  (upvector_z :float))

(cl:export '#.(swig-lispify "mesh_manager_create_plane" 'function))

(cffi:defcfun ("movable_object_set_cast_shadows" #.(swig-lispify "movable_object_set_cast_shadows" 'function)) :void
  (movable_object_handle :pointer)
  (cast_shadows :int))

(cl:export '#.(swig-lispify "movable_object_set_cast_shadows" 'function))

(cffi:defcfun ("create_plane" #.(swig-lispify "create_plane" 'function)) :pointer
  (a :float)
  (b :float)
  (c :float)
  (d :float))

(cl:export '#.(swig-lispify "create_plane" 'function))

(cffi:defcfun ("create_plane_from_normal" #.(swig-lispify "create_plane_from_normal" 'function)) :pointer
  (normal_x :float)
  (normal_y :float)
  (normal_z :float)
  (offset :float))

(cl:export '#.(swig-lispify "create_plane_from_normal" 'function))

(cffi:defcfun ("get_render_system" #.(swig-lispify "get_render_system" 'function)) :pointer)

(cl:export '#.(swig-lispify "get_render_system" 'function))

(cffi:defcfun ("get_render_system_by_name" #.(swig-lispify "get_render_system_by_name" 'function)) :pointer
  (render_system_name :string))

(cl:export '#.(swig-lispify "get_render_system_by_name" 'function))

(cffi:defcfun ("add_render_system" #.(swig-lispify "add_render_system" 'function)) :void
  (render_system :pointer))

(cl:export '#.(swig-lispify "add_render_system" 'function))

(cffi:defcfun ("set_render_system" #.(swig-lispify "set_render_system" 'function)) :void
  (render_system :pointer))

(cl:export '#.(swig-lispify "set_render_system" 'function))

(cffi:defcfun ("render_system_set_config_option" #.(swig-lispify "render_system_set_config_option" 'function)) :void
  (render_system_handle :pointer)
  (option :string)
  (value :string))

(cl:export '#.(swig-lispify "render_system_set_config_option" 'function))

(cffi:defcfun ("create_render_window" #.(swig-lispify "create_render_window" 'function)) :pointer
  (name :string)
  (width :int)
  (height :int)
  (full_screen :int))

(cl:export '#.(swig-lispify "create_render_window" 'function))

(cffi:defcfun ("create_render_window_gl_context" #.(swig-lispify "create_render_window_gl_context" 'function)) :pointer
  (name :string)
  (width :int)
  (height :int)
  (full_screen :int))

(cl:export '#.(swig-lispify "create_render_window_gl_context" 'function))
